# Macroternary

./: .env.example  .gitignore  README.md  SETUP_API_KEYS.md  netlify.toml  start-server.bat
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/seeds/: food_families.json
backend/src/mt/: cli.py  config.py
backend/src/mt/api/: __init__.py  app.py  recipe.py
backend/src/mt/db/: models.py  session.py
backend/src/mt/extractors/: __init__.py  base.py  qwen_ollama.py
backend/src/mt/families/: __init__.py  seed.py
backend/src/mt/scrapers/: __init__.py  base.py
backend/src/mt/scrapers/costco/: __init__.py
backend/src/mt/scrapers/trader_joes/: __init__.py
backend/src/mt/scrapers/walmart/: __init__.py
backend/src/mt/snapshot/: __init__.py  publish.py
backend/src/mt/validators/: __init__.py  product.py
backend/tests/: test_family_seed.py  test_snapshot.py  test_validator.py
docs/: macro_ternary_spec.md
frontend/: index.html  package-lock.json  package.json  styles.css  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/data/: api-keys.json  families.v1.json  meta.json  products.v1.json
frontend/js/: data.js  detail.js  filters.js  geometry.js  isolines.js  main.js  models.js  recipe.js  ternary.js
frontend/public/: families.v1.json  meta.json  products.v1.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/data/: load.ts
frontend/src/filters/: FilterSidebar.tsx
netlify/functions/: package-lock.json  package.json  recipe.ts  tsconfig.json
(+7 files in other folders)
